--- a/styles.css
+++ b/styles.css
@@ -166,8 +166,7 @@ body {
         margin: 0px;
     }
     .container{
-        height: fit-content;
-        margin: 150px;
+        height: 100vh;
         display: block;
         background-image: none; 
     }
